Fixed a few bugs that cropped up. A little more fit & finish stuff, too.

--- a/src/UI/styles/App.css
+++ b/src/UI/styles/App.css
@@ -19,10 +19,18 @@
     grid-row: 1;
     background-color: rgba(0, 0, 0, 0.04);
   }
-  #grabber {
+  #grab-other {
     grid-row: 1;
     grid-column: 1;
     -webkit-app-region: drag;
+    z-index: -100;
+    height: 15px;
+  }
+  #grab-mac {
+    grid-row: 1;
+    grid-column: 1;
+    -webkit-app-region: drag;
+    z-index: -100;
   }
   #window-chrome {
     grid-row: 1;
